# studies-task1

./: Automobilis.cpp  Automobilis.h  CMakeLists.txt  KuroBakas.cpp  KuroBakas.h  README.MD  Ratas.cpp  Ratas.h  SpausdinimoPagalbininkas.cpp  SpausdinimoPagalbininkas.h  Vairas.cpp  Vairas.h  Variklis.cpp  Variklis.h  VykdymoPagalbininkas.cpp  VykdymoPagalbininkas.h  main.cpp
