cmake_minimum_required(VERSION 3.17)
project(projektinis)

set(CMAKE_CXX_STANDARD 14)

add_executable(projektinis main.cpp Automobilis.cpp Automobilis.h Ratas.cpp Ratas.h Variklis.cpp Variklis.h Vairas.cpp Vairas.h KuroBakas.cpp KuroBakas.h SpausdinimoPagalbininkas.cpp SpausdinimoPagalbininkas.h VykdymoPagalbininkas.cpp VykdymoPagalbininkas.h)